2005-08-16	blytkerchan
	* Makefile.in.in [real_all]: add install_kernel as prereq
	* configure.ac.in [CC]: export as $CC -g -ffreestanding to allow
	overriding std CC

2005-03-23	blytkerchan
	* Makefile.in.in [Makefile]: add link.mk as a prerequisit
	[Makefile.in]: run bootstrap.sh, not bootstrap
	[configure.ac]: ditto
	[configure]: ditto
	[link.mk]: new target
	* bootstrap.sh: add drivers and elf to modules

2005-03-22	blytkerchan
	* Makefile.in.in [install_kernel]: don't require kernel.img
	[grub.img]: new target
	[bochsrc]: ditto
	[kernel.img]: remove target

2005-03-21	blytkerchan
	* bootstrap.sh: add sched to modules

2005-03-13	blytkerchan
	* configure.ac.in: use debug info
	* depend.sh: include "system" headers in dependencies

2005-03-10	blytkerchan
	* configure.ac.in: use freestanding gcc compiler

2005-03-08	blytkerchan
	* bootstrap.sh (gen_link_mk): generate map file and print the size of
	the kernel

2005-03-06	blytkerchan
	* Makefile.in.in [install_kernel]: new target
	[kernel.img]: ditto
	
2005-03-04	blytkerchan
	* bootstrap.sh: add bochs module
	* configure.ac.in: add support for --with-bochs option

2004-09-22	blytkerchan
	* Makefile.in.in: add -c to $(AS)'s command-line options when
	assembling .S to .o files

2004-09-21	blytkerchan
	* Makefile.in.in: add a vpath for .S files
	remove references to C++ compiler
	remove references to stuff from Jail we don't use (e.g. pthreads..)
	add @DEFS config variable to CPPFLAGS
	to generate *_OBJ, use *.c and *.S, no .l, .y or .cc files
	generate .d files from .S files
	ditto for .o files
	set AS to @CC@
	* bootstrap.sh: add kernel to modules

2004-09-20	blytkerchan
	* bootstrap.sh (gen_configure_ac): new bootstrap var BUILD_KERNEL
	* configure.ac.in: ditto

	* Makefile.in.in [real_all]: add kernel
	* bootstrap.sh (gen_makefile_in): add $$__KERNEL__$$ bootstrap var
	add diff modules for the kernel
	(gen_link_mk): add halos target to link.mk

	* configure.ac.in: trim down to bare minimum

2004-09-18	blytkerchan