@@ -11,7 +11,11 @@ AC_CANONICAL_HOST
 AC_SUBST(ARCH, ${host_cpu})
 
 # Checks for programs.
-export CC="$CC -g -ffreestanding"
+if test "x$CC" = x; then
+	export CC="gcc -g -ffreestanding"
+else
+	export CC="$CC -g -ffreestanding"
+fi
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_INSTALL
